<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Result"
        android:id="@+id/tv_result"
        android:textColor="@color/black"
        android:textSize="46sp" />

    <EditText
        android:id="@+id/et_first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="First Number"
        android:inputType="number"
        android:textColor="@color/purple_200"
        android:textColorHint="@color/purple_200" />

    <EditText
        android:id="@+id/et_second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Second Number"
        android:inputType="number"
        android:textColor="@android:color/holo_orange_light"
        android:textColorHint="@android:color/holo_orange_light" />

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Plus"
        android:textColor="@android:color/holo_orange_dark" />

    <Button
        android:id="@+id/divideBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Divide"
        android:textColor="@android:color/holo_orange_dark" />


</LinearLayout>
